--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   provider: ^6.0.5
   carousel_slider: ^4.2.1
   pdfx: ^2.4.0
+  intl_phone_field: ^3.2.0
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +78,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/pdf/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
