--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pdfx: ^2.4.0
   intl_phone_field: ^3.2.0
   lottie: ^2.6.0
+  firebase_storage: ^11.5.2
 
 dev_dependencies:
   flutter_test:
