--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,8 @@ dependencies:
   #     path: packages/pdfx
   intl_phone_field: ^3.2.0
   lottie: ^2.6.0
-  firebase_storage: ^11.5.2
   firebase_core: ^2.23.0
+  cloud_firestore: ^4.13.2
 
 dev_dependencies:
   flutter_test:
